# jilm

./: .env.template  .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: example.ipynb  query_doc.ipynb  query_doc_openai.ipynb
jilm/: __init__.py  doc_query.py  document_loader.py  model.py  settings.py  text_splitter.py
tests/: test_doc_query.py  test_document_loader.py  test_model.py
tests/data/: auto-mpg.csv
tests/integration/: conftest.py  test_doc_query.py
tests/unit/: conftest.py  test_document_loader.py  test_model.py  test_settings.py
