[tool.poetry]
name = "jilm"
version = "0.1.2"
description = "Enhance your AI capabilities with jilm"
authors = ["Jean-Baptiste Poullet"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.154"
pygptj = "^1.0.10"
python-dotenv = "^1.0.0"
transformers = "^4.28.1"
# sketch = "^0.3.5"
matplotlib = "^3.7.1"
torch = "^2.0.1"
chromadb = "^0.3.23"
sentence-transformers = "^2.2.2"
unstructured = "^0.6.8"



[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
